force-app/main/default/objects/Learning_Path_Notification_Record__c/Learning_Path_Notification_Record__c.object-meta.xml
<CustomObject>
    <description>Record that stores recipients of learning path completion notifications.</description>
    <label>Learning Path Notification</label>
    <nameField>
        <displayFormat>LPN{00000000}</displayFormat>
        <label>Learning Path Notification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Path Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>