force-app/main/default/objects/Learning_Path_Notification_Record__c/fields/Learning_Path__c.field-meta.xml
<CustomField>
    <fullName>Learning_Path__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Learning Path associated with learning path notification recipients.</description>
    <inlineHelpText>Select the learning path associated with this learning path notification record.</inlineHelpText>
    <label>Learning Path</label>
    <referenceTo>lmscons__Learning_Path__c</referenceTo>
    <relationshipName>Learning_Path_Notification_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>