force-app/main/default/objects/Learning_Path_Notification_Record__c/fields/Notify_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Notify_Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notify learning path participant&#39;s supervisor upon completion of learning path.</description>
    <inlineHelpText>Check this box to notify learning path participant&#39;s supervisor upon learning path completion.</inlineHelpText>
    <label>Notify Supervisor</label>
    <type>Checkbox</type>
</CustomField>