force-app/main/default/objects/Learning_Path_Notification_Record__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Region that is applicable to the learning path participant.</description>
    <inlineHelpText>Select the region applicable to the learning path participant.</inlineHelpText>
    <label>Region</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipName>Learning_Path_Notification_Records</relationshipName>
    <type>Lookup</type>
</CustomField>