force-app/main/default/objects/Learning_Path_Notification_Record__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Role that is applicable to the learning path participant.</description>
    <inlineHelpText>Select the role applicable to the learning path participant.</inlineHelpText>
    <label>Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipName>Learning_Path_Notification_Records</relationshipName>
    <type>Lookup</type>
</CustomField>